# d2l_burn

./: Cargo.toml
data/: house_tiny.csv
src/: chpt2.rs  main.rs
